--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: python
 python: "3.5"
 install: pip install -r requirements.txt
 script: coverage run test_rpn.py
+after_success: coveralls
 
