--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python: "3.5"
 install: pip install -r requirements.txt
-script: coverage run test_rpn.py
-coverage report -m
+script: coverage run test_rpn.py && coverage report -m
 after_success: coveralls
 
